<resources>
    <string name="app_name">BluePad</string>
    <string name="title_activity_button">Dpad</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="e_stop">E-Stop</string>
    <string name="shutdown">Shutdown</string>
    <string name="vol_pos">+</string>
    <string name="vol_neg">-</string>
    <string name="sound_on">On</string>
    <string name="sound_off">Off</string>
    <string name="sound">Sfx</string>
    <string name="volume">Vol</string>
    <string name="sound_cntrl">Sound Control</string>
    <string name="vol_value">100</string>
    <string name="picture_txt">Picture</string>
    <string name="picture">Pic</string>
    <string name="video_on">On</string>
    <string name="video_off">Off</string>
    <string name="video_txt">Video</string>
    <string name="send">Send</string>
    <string name="reboot">Reboot</string>
    <string name="pixel">Neopixel</string>
    <string name="pixel_on">PixelOn</string>
    <string name="light_on">LightOn</string>
    <string name="pixel_off">Off</string>
    <string name="script">Main Script</string>
    <string name="script_start">Start</string>
    <string name="script_stop">Stop</string>
    <string name="camera_view">Camera View</string>
    <string name="lock_slide">Lock Slide</string>
    <string name="unlock_slide">Unlock Slide</string>
    <string name="video_feed">VFeed</string>
</resources>
