<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueapp.octane.bluepad.Dpad"
    tools:ignore="GradleDependency"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        tools:ignore="HardcodedText,RtlHardcoded"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/up_dpad"
        android:layout_width="70dp"
        android:layout_height="86dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/up_button"
        android:text="@string/up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Button
        android:id="@+id/down_dpad"
        android:layout_width="70dp"
        android:layout_height="86dp"
        android:text="@string/down"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/up_dpad"
        android:background="@drawable/down_button"/>

    <Button
        android:id="@+id/left_dpad"
        android:layout_width="86dp"
        android:layout_height="70dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="113dp"
        android:text="@string/left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:background="@drawable/left_button"/>

    <Button
        android:id="@+id/right_dpad"
        android:layout_width="86dp"
        android:layout_height="70dp"
        android:text="@string/right"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="113dp"
        android:layout_marginRight="85dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:background="@drawable/right_button"/>

    <Button
        android:id="@+id/manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/down_dpad" />

    <Button
        android:id="@+id/auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/auto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manual" />
</android.support.constraint.ConstraintLayout>
